<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Converter</string>
    <string name="action_settings">Settings</string>
    <string name="uy">UYU</string>
    <string name="convert_to">convert to</string>
    <string name="ar">ARS</string>
    <string name="usd">USD</string>
    <string name="convert_from">convert from</string>
    <string name="convert">convert</string>
    <string name="empty"></string>
    <string name="onClick">onClick</string>

</resources>