<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<RadioGroup
		android:id="@+id/radioGroup1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="362dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:layout_weight="0.46"
			android:padding="@dimen/without"
			android:paddingTop="@dimen/without"
			android:text="@string/convert_from"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<RadioButton
			android:id="@+id/radio1Ar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:checked="false"
			android:text="@string/ar" />

		<RadioButton
			android:id="@+id/radio0Uy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/uy" />

		<RadioButton
			android:id="@+id/radio2Usd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/usd" />

		<RadioGroup
			android:id="@+id/RadioGroup02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/without" >

			<TextView
				android:id="@+id/TextView02"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:padding="@dimen/without"
				android:paddingTop="@dimen/without"
				android:text="@string/convert_to"
				android:textAppearance="?android:attr/textAppearanceLarge" />

			<RadioButton
				android:id="@+id/RadioButton3Ar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="36dp"
				android:checked="true"
				android:text="@string/ar" />

			<RadioButton
				android:id="@+id/RadioButton01Uy"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/uy" />

			<RadioButton
				android:id="@+id/RadioButton02Usd"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/usd" />
		</RadioGroup>
	</RadioGroup>

	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/radioGroup1"
		android:layout_marginTop="40dp"
		android:onClick="onClick"
		android:text="@string/convert" />

	<EditText
		android:id="@+id/editText1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/button1"
		android:ems="10"
		android:inputType="numberDecimal" >

		<requestFocus />
	</EditText>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/editText1"
		android:layout_marginTop="24dp"
		android:text="@string/empty" />

	<TextView
		android:id="@+id/TextView01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/textView2"
		android:text="@string/empty" />

</RelativeLayout>